--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   "homepage": "https://github.com/federicodonner/mghsingles_api#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "cross-fetch": "^3.1.4",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
-    "multer": "^1.4.4",
     "mysql": "^2.18.1"
   }
 }
