--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
+    "helmet": "^5.0.1",
     "mysql": "^2.18.1"
   }
 }
