fix(package.json): add engine version for Heroku

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ DB_HOST="example"
 DB_USER="example"
 DB_PASSWORD="example"
 DB_DATABASE="example"
+SCRYFALL_BULK_URL="https://api.scryfall.com/bulk-data"
