--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "express-validator": "^6.14.0",
     "helmet": "^5.0.1",
     "mysql": "^2.18.1"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
