--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -r dotenv/config"
+    "start-dev": "nodemon -r dotenv/config",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
