build(app, oauth): implement postgres, migrate oauth route
Add schema to the repo, remove mysql. Create new connection file.

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@ DB_HOST="example"
 DB_USER="example"
 DB_PASSWORD="example"
 DB_DATABASE="example"
+DB_PORT="1234"
 SCRYFALL_BULK_URL="https://api.scryfall.com/bulk-data"
